Fix warnings from Ansible Galaxy import
Fix a few minor formatting issues reported by Ansible Galaxy.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -25,13 +25,13 @@ galaxy_info:
         - all
 
   galaxy_tags:
-    - Rack Scale Design
-    - RSD
+    - rack scale design
+    - rsd
     - system
     - orchestration
     - system
     - composability
-    - composable-infrastructure
+    - composable infrastructure
     - provisioning
 
 dependencies: []
