Fix tags for Ansible Galaxy
Modify Galaxy tags so that they don't contain spaces anymore.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -25,13 +25,12 @@ galaxy_info:
         - all
 
   galaxy_tags:
-    - rack scale design
+    - rackscale
     - rsd
     - system
     - orchestration
     - system
     - composability
-    - composable infrastructure
     - provisioning
 
 dependencies: []
